# Tohru

./: .gitignore  .replit  WaifuBattler.db  anilist_api.py  db.py  embed.py  main.py  model.mwb  pyproject.toml  requirements.txt  schema.sql  setup.py  waifus.json
queries/: anime.ql  character.ql  manga.gql  trending.ql  trending_manga.ql
sql/: data_bkp.sql  drop_tables.sql  schema.sql
