[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "tohru"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
[tool.poetry.dependencies.py-cord]
git = "https://github.com/Pycord-Development/pycord"
[tool.poetry.dev-dependencies]
